@@ -3,6 +3,8 @@ mvn  clean package -D maven.test.skip=true
 ## 项目介绍
 **drive-cloud**是一款微服务系统，采用前后端分离模式， 后台采用Spring cloud Alibaba作为微服务框架，基于OAuth2 的RBAC权限管理，集成Sentinel从流量控制、熔断降级、系统负载等多个维度保护服务的稳定性，采用Nacos作为注册中心和配置中心。
 
+作者：郭正洋 框架问题联系 15116101123  1078823721
+
 ## 演示地址
 暂无，需要自己clone到本地运行。
 ## 技术选型
@@ -210,3 +212,15 @@ map	如果创建的Optional中的值存在，对该值执行提供的Function函
 flagMap	如果创建的Optional中的值存在，就对该值执行提供的Function函数调用，返回一个Optional类型的值，否则就返回一个空的Optional对象
 isPresent	如果创建的Optional中的值存在，返回true，否则返回false
 ifPresent	如果创建的Optional中的值存在，则执行该方法的调用，否则什么也不做
+
+
+java -Xmx3550m -Xms3550m -Xmn2g -Xss128k
+-Xmx3550m：设置JVM最大可用内存为3550M。
+-Xms3550m：设置JVM促使内存为3550m。此值可以设置与-Xmx相同，以避免每次垃圾回收完成后JVM重新分配内存。
+-Xmn2g：设置年轻代大小为2G。整个JVM内存大小=年轻代大小 + 年老代大小 + 持久代大小。持久代一般固定大小为64m，所以增大年轻代后，将会减小年老代大小。此值对系统性能影响较大，Sun官方推荐配置为整个堆的3/8。
+-Xss128k：设置每个线程的堆栈大小。JDK5.0以后每个线程堆栈大小为1M，以前每个线程堆栈大小为256K。更具应用的线程所需内存大小进行调整。在相同物理内存下，减小这个值能生成更多的线程。但是操作系统对一个进程内的线程数还是有限制的，不能无限生成，经验值在3000~5000左右。
+java -Xmx3550m -Xms3550m -Xss128k -XX:NewRatio=4 -XX:SurvivorRatio=4 -XX:MaxPermSize=16m -XX:MaxTenuringThreshold=0
+-XX:NewRatio=4:设置年轻代（包括Eden和两个Survivor区）与年老代的比值（除去持久代）。设置为4，则年轻代与年老代所占比值为1：4，年轻代占整个堆栈的1/5
+-XX:SurvivorRatio=4：设置年轻代中Eden区与Survivor区的大小比值。设置为4，则两个Survivor区与一个Eden区的比值为2:4，一个Survivor区占整个年轻代的1/6
+-XX:MaxPermSize=16m:设置持久代大小为16m。
+-XX:MaxTenuringThreshold=0：设置垃圾最大年龄。如果设置为0的话，则年轻代对象不经过Survivor区，直接进入年老代。对于年老代比较多的应用，可以提高效率。如果将此值设置为一个较大值，则年轻代对象会在Survivor区进行多次复制，这样可以增加对象再年轻代的存活时间，增加在年轻代即被回收的概论。
